testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket_or_hexadecimal/case19.expect.out
error: expected '}' or hexadecimal digit in unicode escape, found '"'
  ==> case19.cj:16:24:
   | 
16 | \n cangjie2 ${ "\u{1233"
   |                 ~~     ^ expected '}' or hexadecimal digit
   |                 |
   |                 because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

error: expected '}' or hexadecimal digit in unicode escape, found '"'
  ==> case19.cj:18:12:
   | 
18 | """"\u{1233"
   |     ~~     ^ expected '}' or hexadecimal digit
   |     |
   |     because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

2 errors generated, 2 errors printed.
